# talking-decks

./: CONTRIBUTING.md  README.md  index.html  pyproject.toml
.github/workflows/: main.yaml
decks/en_fr/common_phrases_a1_a2/: Common French Phrases A1-A2.apkg  deck.toml  notes.json
decks/en_ru/common_phrases_a1_a2/: Common Russian Phrases A1-A2.apkg  deck.toml  notes.json
talking_decks/: deck_builder.py  deck_maker.py  deck_model.py
talking_decks/tests/: test_deck_model.py  test_decks.py
