[tool.poetry]
name = "talking_decks"
version = "1.0.0"
description = ""
authors = ["Will Meyers <will@willmeyers.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
genanki = "^0.13.0"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
make_deck = "talking_decks.deck_maker:main"
build_deck = "talking_decks.deck_builder:main"